Fixed Spacings in Eater Page

--- a/styles/all.css
+++ b/styles/all.css
@@ -633,7 +633,7 @@ PROJECTS GRID
 .overlay h3 {
     color: white;
     position: absolute;
-    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    text-shadow: 2px 4px 8px rgba(0,0,0,0.3);
     top: 50%;
     left: 51.5%;
     -webkit-transform: translate(-50%, -50%);
@@ -1225,9 +1225,11 @@ ol li{
 .proto-images {
     display: flex;
     margin: 0 auto;
+    margin-top: 3vh;
     align-content: center;
     padding-right: 7vw;
-    padding-left: 3vw;
+    margin-bottom: 2vh;
+    padding-left: 7vw;
 }
 
 .proto-images img {
